# MultiTranslater

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/backend/: .env.example  package.json  tsconfig.json
apps/backend/src/: env.ts  ocr.ts  server.ts  translationManager.ts
apps/backend/src/routes/: ocrTranslate.ts  translate.ts
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: backend_client.rs  capture.rs  main.rs  settings.rs
apps/desktop/src/lib/: backendApi.ts  tauriCommands.ts
apps/desktop/src/windows/: ResultWindow.tsx  SelectionWindow.tsx  SettingsWindow.tsx
apps/extension/: package.json  wxt.config.ts
apps/extension/entrypoints/: background.ts  content.ts
apps/extension/entrypoints/popup/: App.tsx  index.html
apps/extension/lib/: api.ts  imageCrop.ts
